--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     "require": {
         "php": "^8.2",
         "deeplcom/deepl-php": "^1.9",
-        "illuminate/contracts": "^10.0||^11.0",
+        "illuminate/contracts": "^10.0||^11.0||^12.0",
         "spatie/laravel-package-tools": "^1.16"
     },
     "require-dev": {
@@ -51,7 +51,10 @@
     "autoload": {
         "psr-4": {
             "Ferdiunal\\LaravelTranslator\\": "src/"
-        }
+        },
+        "files": [
+            "src/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
